# webgpu-cpp-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  generate.py  webgpu.cppm  webgpu.template.cppm
include/wcpp/: args_parser.hpp
src/: args_parser.cpp  main.cpp
